# Chemtool

./: .gitignore  1.6.15 patches.txt  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.sgi32  Makefile.sgi64  Makefile.std  NEWS  README  README.md  TODO  acinclude.m4  aclocal.m4  autogen.sh  bitmap1.h  chemcurs.h  chemproc.c  chemtool  chemtool.1  chemtool.desktop  chemtool.spec  cht.1  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure~  ct.h  ct1.h  draw.c  graph.c  gtkfilesel.c  gtkfilesel.h  gtkintl.h  gtkmenu.c  (+11 more)
CURATOR-NOTES-2025/: 2025-License-Inventory.txt  2025-Timeline.txt  README.md  chemtool-versions-list.txt  chemtool-web-page-list.txt
autom4te.cache/: output.0  output.1  requests  traces.0  traces.2
examples/: 14263232.mol  AMP.cht  Adenosine.cht  Dehydrotubifolin.cht  Indolizomycin.cht  Lepicidin-A-Aglycon.cht  Neu2  amine.mol  anabsinthin.cht  anthocyanidine.cht  atp.cht  breve.cht  bufotalin.cht  byrostatin1.cht  c70.cht  camphor.cht  chlorophyll.cht  claisen.cht  dodecahedran.cht  indigo.cht  kdo.cht  krebs.cht  labeltest  pagodan.cht  penicillin_v.cht  pteridin.cht  reaction.cht  rutamycin_b.cht  sample.sdf  tbutylazulene.cht  tcdd.cht  tetracyclin.cht  textsizes.cht  v3000.mol  viagra.cht
gnome/: chemtool.desktop
gnome/mime-types/: chemtool.keys  chemtool.mime
inout/: inout_common.h  mdl_io.c  native_io.c  pdb_io.c
kde/applnk/Graphics/: chemtool.desktop
kde/mimelnk/application/: x-chemtool.desktop
m4/: Makefile  Makefile.in
pld/: chemtool.spec.pld
po/: LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  bg.gmo  bg.po  bg.po~  cs.gmo  cs.po  cs.po~  de.gmo  de.po  fr.gmo  fr.po  nl.gmo  nl.po  nl.po~  pl.gmo  pl.po  pl.po~  pt_BR.gmo  pt_BR.po  pt_BR.po~  pt_PT.gmo  pt_PT.po  pt_PT.po~  ru.gmo  ru.po
src-cht/: Changelog  Makefile  Makefile.in  Makefile.std  abbrev.txt  cht-1.7.c  cht-1.7.pp  cht-2.4.c  cht-2.5.c  cht-2.6.c  cht-2.7.c  cht.c
